--- a/portfolio/01--PSD-to-HTML/style.css
+++ b/portfolio/01--PSD-to-HTML/style.css
@@ -99,6 +99,11 @@ article {
 	.subscribe input[type="text"], .subscribe input[type="email"] {
 		width: 260px;
 	}
+
+	header h1 {
+		font-size: 3.25em;	
+		margin-bottom: px;
+	}
 }
 
 @media screen and (max-width: 820px) {
@@ -115,7 +120,7 @@ article {
 	}
 
 	header h1 {
-		font-size: 2.75em;	
+		font-size: 2.5em;	
 		margin-bottom: 20px;
 	}
 
