--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header h1 a:hover {
 body {
 	background: #cbecdf;
     font-family: monospace; /*'Open Sans', sans-serif*/
-    font-size: 1em;
+    font-size: 1rem;
 }
 		
 a {			
@@ -34,5 +34,5 @@ a:hover {
 
 .not-learned {
 	font-weight: bold;
-	font-size: 1.2em;
+	font-size: 1.2rem;
 }
